<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">p1_liang_weikun</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint">0.0</string>
    <string name="text">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="star">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="dash">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="doublezero">00</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="C">C</string>
    <string name="Mpos">M+</string>
    <string name="Mneg">M-</string>
    <string name="MRC">MRC</string>

</resources>
