<?xml version="1.0" encoding="utf-8"?> 
<TableLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/calculatorTable"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:shrinkColumns="*"  
    android:stretchColumns="*"
    android:gravity="center">  
    <TableRow  
        android:id="@+id/outputRow"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
        <EditText
            android:id="@+id/output"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:hint="@string/hint"
            android:layout_weight="0.75"
            android:gravity="right"
            android:freezesText="true"></EditText>
         <Button
             android:id="@+id/divButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/text"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
    </TableRow>  
    <TableRow  
        android:id="@+id/tableRow1"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent">  
       <Button
             android:id="@+id/oneButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/one"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/twoButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/two"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/threeButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/three"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/multButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/star"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
    </TableRow>  
    <TableRow  
        android:id="@+id/tableRow2"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent">  
       <Button
             android:id="@+id/fourButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/four"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/fiveButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/five"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/sixButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/six"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/minusButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/dash"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
    </TableRow>  
    <TableRow  
        android:id="@+id/tableRow3"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent">  
       <Button
             android:id="@+id/sevenButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/seven"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/eightButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/eight"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/nineButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/nine"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/plusButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/plus"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
    </TableRow> 
    <TableRow  
        android:id="@+id/tableRow4"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent">  
       <Button
             android:id="@+id/zeroButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/zero"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.50"/>
       <Button
             android:id="@+id/dubZeroButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/doublezero"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
       <Button
             android:id="@+id/decButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/dot"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
    </TableRow>
    <TableRow  
        android:id="@+id/tableRow5"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent">  
       <Button
             android:id="@+id/equalsButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/equal"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.75"/>
       <Button
             android:id="@+id/clearButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/C"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.25"/>
    </TableRow> 
    <TableRow  
        android:id="@+id/tableRow6"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent">  
       <Button
             android:id="@+id/memPlusButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/Mpos"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.33"/>
       <Button
             android:id="@+id/memMinusButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/Mneg"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.33"/>
       <Button
             android:id="@+id/mrcButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:text="@string/MRC"
             android:layout_gravity="center_horizontal" 
             android:layout_weight="0.33"/>
    </TableRow> 
</TableLayout>
